--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "dingo/api": "1.0.*@dev",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0",
-        "dingo/api": "1.0.*@dev"
+        "laravel/passport": "^3.0",
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
