--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "dingo/api": "1.0.*@dev",
         "laravel/framework": "5.4.*",
         "laravel/passport": "^3.0",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "zircote/swagger-php": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
